--- a/DataStructure/数据结构/树/二分搜索树.md
+++ b/DataStructure/数据结构/树/二分搜索树.md
@@ -88,7 +88,286 @@
 
 ## 实现二分搜索树
 
+```java
+public class BST<T extends Comparable<T>> {
 
+    private static class Node<T> {
+        private T value;
+        private Node<T> left, right;
+
+        public Node(T value) {
+            this.value = value;
+        }
+    }
+
+    private Node<T> root;
+    private int size;
+
+    public boolean isEmpty() {
+        return size == 0;
+    }
+
+    public void add(T e) {
+        root = add(root, e);
+    }
+
+    private Node<T> add(Node<T> node, T e) {
+        if (node == null) {
+            size++;
+            return new Node<>(e);
+        }
+        if (e.compareTo(node.value) < 0) {
+            node.left = add(node.left, e);
+        } else if (e.compareTo(node.value) > 0) {
+            node.right = add(node.right, e);
+        }
+        return node;
+    }
+
+    public boolean contains(T e) {
+        return contains(root, e);
+    }
+
+    private boolean contains(Node<T> node, T e) {
+        if (node == null) {
+            return false;
+        }
+        if (e.compareTo(node.value) < 0) {
+            return contains(node.left, e);
+        } else if (e.compareTo(node.value) > 0) {
+            return contains(node.right, e);
+        }
+        return true;
+    }
+
+    public void preorder() {
+        preorder(root);
+    }
+
+    /**
+     * 前序遍历
+     *
+     * @param node
+     */
+    private void preorder(Node<T> node) {
+        if (node == null) {
+            return;
+        }
+        System.out.print(node.value);
+        preorder(node.left);
+        preorder(node.right);
+    }
+
+    /**
+     * 前序遍历的非递归遍历
+     */
+    public void preorderNoRecurse() {
+        if (root == null) {
+            return;
+        }
+        Stack<Node<T>> stack = new Stack<>();
+        stack.push(root);
+        while (!stack.isEmpty()) {
+            Node<T> n = stack.pop();
+            System.out.print(n.value);
+            if (n.right != null) {
+                stack.push(n.right);
+            }
+            if (n.left != null) {
+                stack.push(n.left);
+            }
+        }
+    }
+
+    /**
+     * 中序遍历
+     */
+    public void inorder() {
+        inorder(root);
+    }
+
+    private void inorder(Node<T> node) {
+        if (node == null) {
+            return;
+        }
+        inorder(node.left);
+        System.out.print(node.value);
+        inorder(node.right);
+    }
+
+    public void postorder() {
+        postorder(root);
+    }
+
+    private void postorder(Node<T> node) {
+        if (node == null) {
+            return;
+        }
+        postorder(node.left);
+        postorder(node.right);
+        System.out.print(node.value);
+    }
+
+    /**
+     * 广度优先遍历
+     */
+    public void levelorder() {
+        if (root == null) {
+            return;
+        }
+        Deque<Node> queue = new ArrayDeque<>();
+        queue.addLast(root);
+        while (!queue.isEmpty()) {
+            Node<T> node = queue.removeFirst();
+            System.out.print(node.value);
+            if (node.left != null) {
+                queue.addLast(node.left);
+            }
+            if (node.right != null) {
+                queue.addLast(node.right);
+            }
+        }
+    }
+
+    public T getMax() {
+        if (root == null) {
+            throw new NoSuchElementException();
+        }
+        return getMax(root).value;
+    }
+
+    private Node<T> getMax(Node node) {
+        if (node.right == null) {
+            return node;
+        }
+        return getMax(node.right);
+    }
+
+    public T getMin() {
+        if (root == null) {
+            throw new NoSuchElementException();
+        }
+        return getMin(root).value;
+    }
+
+    private Node<T> getMin(Node node) {
+        if (node.left == null) {
+            return node;
+        }
+        return getMin(node.left);
+    }
+
+    public T removeMin() {
+        T delete = getMin();
+        // 因为可能只有一个节点，所以需要 root 接收 removeMin 的返回值 null
+        root = removeMin(root);
+        return delete;
+    }
+
+    private Node<T> removeMin(Node node) {
+        if (node.left == null) {
+            Node<T> rightNode = node.right;
+            node.right = null;
+            size--;
+            return rightNode;
+        }
+        // 把要删除节点的右节点赋值给父节点的左节点
+        node.left = removeMin(node.left);
+        return node;
+    }
+
+    public T removeMax() {
+        T delete = getMax();
+        // 因为可能只有一个节点，所以需要 root 接收 removeMin 的返回值 null
+        root = removeMax(root);
+        return delete;
+    }
+
+    private Node<T> removeMax(Node<T> node) {
+        if (node.right == null) {
+            Node<T> leftNode = node.left;
+            size--;
+            node.left = null;
+            return leftNode;
+        }
+        node.right = removeMax(node.right);
+        return node;
+    }
+
+    public void remove(T e) {
+        root = remove(root, e);
+    }
+
+    private Node<T> remove(Node<T> node, T element) {
+        if (node == null) {
+            return null;
+        }
+        //如果要删除的节点小于当前节点，继续查询其左子树
+        if (element.compareTo(node.value) < 0) {
+            node.left = remove(node.left, element);
+            return node;
+        }
+        // 如果要删除的节点大于当前节点，继续查询其右子树
+        if (element.compareTo(node.value) > 0) {
+            node.right = remove(node.right, element);
+            return node;
+        }
+
+        //要删除的节点就是当前的节点
+        //如果要删除节点的左子树为空
+        if (node.left == null) {
+            Node<T> rightNode = node.right;
+            node.right = null;
+            size--;
+            return rightNode;
+        }
+
+        // 如果要删除节点的右子树为空
+        if (node.right == null) {
+            Node<T> leftNode = node.left;
+            node.left = null;
+            size--;
+            return leftNode;
+        }
+
+        // 如果要删除的节点左右子树都不为空
+        // 找到要删除节点的后继，也就是右子树的最小值
+        Node<T> successor = getMin(node.right);
+        successor.right = removeMin(node.right);
+        successor.left = node.left;
+        node.left = node.right = null;
+        return successor;
+    }
+}
+```
+
+　　由于二分搜索树的特性，二分搜索树的中序遍历就是二分搜索树的从小到大的顺序。
+
+　　上面的二分搜索树主要是通过递归实现的，下面仅分析下 add 插入方法的递归：
+
+　　假设要往下面一个二分搜索树插入元素 7：
+
+![](image/二分搜索树插入1.png)
+
+　　插入操作的调用栈如下所示（为了方便描述，省略具体的栈帧细节，栈帧里的数字均表示节点）：
+
+![](image/二分搜索树插入2.png)
+
+![](image/二分搜索树插入3.png)
+
+　　插入的最终结果如下：
+
+![](image/二分搜索树插入4.png)
+
+　　为什么要用 root 接收 add(root,e) 方法的返回值？
+
+```java
+public void add(T e) {
+   root = add(root, e);
+}
+```
+
+　　这时因为如果当前二叉搜索树为空，那么新插入的节点就是根节点。如果不为空，也就是对 root 根节点赋值给自己。用递归的方式实现很优雅巧妙。删除操作也是类似的。
 
 ## 二分搜索树的不足
 
