--- a/DataStructure/数据结构/树/平衡二叉树.md
+++ b/DataStructure/数据结构/树/平衡二叉树.md
@@ -45,7 +45,7 @@
 
 　　节点的高度就是从根节点到该结点的边的总和。
 
-　　节点的平衡因子是左子树的高度减去它的右子树的高度。
+　　节点的平衡因子 BF（Balance Factor） 是左子树的高度减去它的右子树的高度。
 
 　　带有平衡因子 1、0 或 -1 的节点被认为是平衡的，因为它的左右子树高度差不超过 1。
 
