--- a/Java/线程/死锁.md
+++ b/Java/线程/死锁.md
@@ -20,6 +20,8 @@
 
 ## 死锁代码
 
+### 死锁发生的例子 1
+
 ```java
 public class LockTest {
     public static Integer obj1 = 0;
@@ -39,18 +41,14 @@ class LockA implements Runnable {
     @Override
     public void run() {
         try {
-
-
             System.out.println(new Date().toString() + " LockA 开始执行");
             while (true) {
                 synchronized (LockTest.obj1) {
-                    LockTest.obj1++;
-                    System.out.println(new Date().toString() + " LockA 锁住 obj1 LockTest.obj1:" + LockTest.obj1);
-                    Thread.sleep(3000); // 此处等到是给 B 能锁住机会
+                    System.out.println(new Date().toString() + " LockA 锁住 obj1 LockTest.obj1");
+                    Thread.sleep(1000); // 此处等到是给 B 能锁住机会
                     synchronized (LockTest.obj2) {
-                        LockTest.obj2 = (char) (LockTest.obj2 + 1);
-                        System.out.println(new Date().toString() + " LockA 锁住 obj2 LockTest.obj2:" + LockTest.obj2);
-                        Thread.sleep(60 * 1000); // 为测试，占用了就不放
+                        System.out.println(new Date().toString() + " LockA 锁住 obj2 LockTest.obj2");
+                        Thread.sleep(1000); // 为测试，占用了就不放
                     }
                 }
 
@@ -70,13 +68,11 @@ class LockB implements Runnable {
             System.out.println(new Date().toString() + " LockB 开始执行");
             while (true) {
                 synchronized (LockTest.obj2) {
-                    LockTest.obj2 = (char) (LockTest.obj2 + 1);
-                    System.out.println(new Date().toString() + " LockB 锁住 obj2 LockTest.obj2:" + LockTest.obj2);
-                    Thread.sleep(3000); // 此处等到是给 A 能锁住机会
+                    System.out.println(new Date().toString() + " LockB 锁住 obj2 LockTest.obj2");
+                    Thread.sleep(1000); // 此处等到是给 A 能锁住机会
                     synchronized (LockTest.obj1) {
-                        LockTest.obj1++;
-                        System.out.println(new Date().toString() + " LockA 锁住 obj1 LockTest.obj1:" + LockTest.obj1);
-                        Thread.sleep(60 * 1000); // 为测试，占用了就不放
+                        System.out.println(new Date().toString() + " LockB 锁住 obj1 LockTest.obj1");
+                        Thread.sleep(1000); // 为测试，占用了就不放
                     }
                 }
 
@@ -91,15 +87,67 @@ class LockB implements Runnable {
 　　输出结果：
 
 ```java
-Tue Jun 09 18:57:25 CST 2020 LockB 开始执行
-Tue Jun 09 18:57:25 CST 2020 LockA 开始执行
-Tue Jun 09 18:57:25 CST 2020 LockB 锁住 obj2 LockTest.obj2:b
-Tue Jun 09 18:57:25 CST 2020 LockA 锁住 obj1 LockTest.obj1:1
+Thu Jun 11 15:40:10 CST 2020 LockA 开始执行
+Thu Jun 11 15:40:10 CST 2020 LockB 开始执行
+Thu Jun 11 15:40:10 CST 2020 LockA 锁住 obj1 LockTest.obj1
+Thu Jun 11 15:40:10 CST 2020 LockB 锁住 obj2 LockTest.obj2
 ```
 
-　　此时死锁产生。
+　　结果显示两个线程最后都在等待对方释放锁，最近进入了死锁状态。
 
-## 解决死锁
+### 死锁发生的例子 2
+
+```java
+public class TestLock {
+
+    public static void main(String[] args) {
+        TestClass classA = new TestClass();
+        TestClass classB = new TestClass();
+        new TestThread(classA, classB).start();
+        new TestThread(classB, classA).start();
+    }
+
+    public static class TestClass {
+        public synchronized void method(TestClass clazz) {
+            System.out.println("TestClass method in");
+            clazz.methods();
+            System.out.println("TestClass method out");
+        }
+
+        public synchronized void methods() {
+            System.out.println("TestClass method2");
+        }
+    }
+
+    public static class TestThread extends Thread {
+        private TestClass class1;
+        private TestClass class2;
+
+        public TestThread(TestClass class1, TestClass class2) {
+            this.class1 = class1;
+            this.class2 = class2;
+        }
+
+        @Override
+        public void run() {
+            class1.method(class2);
+        }
+    }
+}
+```
+
+　　输出结果：
+
+```java
+TestClass method in
+TestClass method in
+```
+
+　　结果显示进入两次方法，但是并没有走完，发生死锁。
+
+　　一旦出现死锁，整个程序既不会发生任何错误，也不会给出任何提示，只是所有线程处于阻塞状态，无法继续。java 悉尼及没有提供检测，也没有采取任何措施来处理死锁的情况，所以多线程编程中，必须手动应该采取措施避免死锁。
+
+## 避免死锁
 
 　　为使系统不发生死锁，必须设法破坏产生死锁的四个必要条件之一，或者允许死锁产生，但当死锁发生时能检测出死锁，并有能力实现恢复。
 
@@ -110,30 +158,96 @@ Tue Jun 09 18:57:25 CST 2020 LockA 锁住 obj1 LockTest.obj1:1
 3. 死锁检测：死锁预防和避免都是事前措施，而死锁的检测则是判断系统是否处于死锁状态，如果是，则执行死锁解除策略。
 4. 死锁解除：这是与死锁检测结合使用的，它使用的方式就是剥夺，即将某进程所拥有的资源强行回收，分配给其他的进程。
 
+　　很多时候实际锁的交叉可能涉及很多个，要想很好的避免只能认工仔细检查，一旦在一个同步方法中，或者说在一个锁的保护的范围中，调用了其他对象的方法时，就要十分的小心：
 
+1. 如果其他对象的这个方法会消耗比较长的时间，那么就会导致锁被持有了很长的时间。
+2. 如果其他对象的这个方法是一个同步方法，那么就要注意避免发生死锁的可能性了。
+
+　　总之是尽量避免在一个同步方法中调用其他对象的延时方法和同步方法。
 
 ### 死锁预防
 
 * 打破互斥条件：允许进程同时访问资源（有些资源就是不可以同时访问的，无实用价值）。
 * 打破不可抢占条件：比如给进程设置优先级，高优先级的可以抢占资源（实现困难，降低系统性能）。
-
-
+* 打破占有且等待条件：实行资源预分配策略，即进程在运行前一次性的向系统申请它所需要的全部资源（不可预测资源的实用、利用率低、降低并发性）。
+* 破坏循环等待条件：采用这种策略，即把资源事先分类编号，按号分配，使进程在申请、占用资源时不会形成环路。所有进程对资源的请求必须严格按资源序号递增的顺序提出（限制和编号实现困难，增加系统开销，有些资源暂时不用也需要先申请，增加了进程对资源的占用时间）。
 
 ### 死锁避免
 
+　　允许进程动态的申请资源，但系统在进行资源分配前，应先计算此次资源分配的安全性。若此次分配不会导致系统进入不安全状态，则将资源分配给进程，否则，让进程等待。
 
+　　所谓安全状态，是指系统能按某种进程推进顺序，为每个进程分配其所需要的资源，直至满足每个进程对资源的最大需求，是每个进程都可以顺序的完成。此时成 P1P2P3... 为安全序列，如果系统无法找到一个安全序列，则称系统处于不安全状态。
+
+　　并非所有的不安全状态都是死锁状态，但当系统进入不安全状态后，便可能进入死锁状态，反之，只要系统处于安全状态，系统便可以避免进入死锁状态。
+
+　　银行家算法是著名的死锁避免算法。
 
 ### 死锁检测
 
-
+　　资源分配图&死锁定理。
 
 ### 死锁解除
 
+1. 资源剥夺法。挂起某些死锁进程，并抢占它的资源，将这些资源分配给其他的死锁进程。但应防止被挂起的进程长时间得不到资源时，而处于资源匮乏的状态。
+2. 资源撤销法。强制撤销一个或一部分进程并剥夺这些进程的资源，撤销的原则可以按进程的优先级和撤销进程代价的高低进行。
+3. 进程回退法。让一个或多个进程回退到足以回避死锁的地步，进程回退时资源释放资源而不是被剥夺。要求系统保持进程的历史信息，设置还原点。
 
+### 调整申请锁的范围
+
+```java
+    public static class TestClass {
+        public void method(TestClass clazz) {
+            System.out.println("TestClass method in");
+            synchronized (this){
+				// do something
+            }
+            clazz.methods();
+            System.out.println("TestClass method out");
+        }
+
+        public synchronized void methods() {
+            System.out.println("TestClass method2");
+        }
+    }
+```
+
+　　原来锁是加在方法上的，现在该为在方法内的一部分，这样在实用第二个锁时本身的锁已经释放了。如果减少锁的申请范围可以避免锁的申请发生闭环的话，那么就可以避免死锁。
+
+### 调整申请锁的顺序
+
+　　在有些情况下是不允许调整锁的范围的，比如银行转账的场景下，必须同时获得两个账户上的锁，才能进行操作，两个锁的申请必须发生交叉。这时要想打破锁闭环，必须调整锁的申请顺序，总是以相同的顺序来申请锁，比如总是先申请 id 大的账号上的锁，然后再申请 id 小的彰化上的锁，这样就无法形成导致死锁的那个闭环。
+
+```java
+public class Account {
+    private int id;    // 主键
+    private String name;
+    private double balance;
+
+    public void transfer(Account from, Account to, double money){
+        if(from.getId() > to.getId()){
+            synchronized(from){
+                synchronized(to){
+                    // transfer
+                }
+            }
+        }else{
+            synchronized(to){
+                synchronized(from){
+                    // transfer
+                }
+            }
+        }
+    }
+
+    public int getId() {
+        return id;
+    }
+}
+```
+
+　　这样的话，即使发生了两个账户比如 id  = 1 的和 id = 100 的两个账户互相转账，因为不管是哪个线程先获得了 id = 100 上的锁，另外一个线程都不会去获取 id = 1 上的锁（因为他没有获得 id = 100 上的锁），只能是哪个线程先获得 id = 100 上的锁，哪个线程就先进行转账。这里出了使用 id 之外，如果没有类似 id 这样的属性可以比较，那么也可以使用对象的 hashCode() 的值来进行比较。
 
 ### 使用信号量解决死锁
-
-
 
 　　为了解决上面的死锁问题，不适用显式的去锁，用信号量去控制。
 
@@ -144,10 +258,8 @@ Tue Jun 09 18:57:25 CST 2020 LockA 锁住 obj1 LockTest.obj1:1
 ```java
 public class UnLockTest {
     public static String obj1 = "obj1";
-    public static int num1 = 0;
     public static final Semaphore a1 = new Semaphore(1);
     public static String obj2 = "obj2";
-    public static char num2 = 'a';
     public static final Semaphore a2 = new Semaphore(1);
 
     public static void main(String[] args) {
@@ -167,12 +279,10 @@ class LockAa implements Runnable {
             System.out.println(new Date().toString() + " LockA 开始执行");
             while (true) {
                 if (UnLockTest.a1.tryAcquire(1, TimeUnit.SECONDS)) {
-                    UnLockTest.num1++;
-                    System.out.println(new Date().toString() + " LockA 锁住 obj1 UnLockTest.num1：" + UnLockTest.num1);
+                    System.out.println(new Date().toString() + " LockA 锁住 obj1");
                     if (UnLockTest.a2.tryAcquire(1, TimeUnit.SECONDS)) {
-                        UnLockTest.num2 = (char) (UnLockTest.num2 + 1);
-                        System.out.println(new Date().toString() + " LockA 锁住 obj2 UnLockTest.num2：" + UnLockTest.num2);
-                        Thread.sleep(60 * 1000);
+                        System.out.println(new Date().toString() + " LockA 锁住 obj2");
+                        Thread.sleep(1000);
                     } else {
                         System.out.println(new Date().toString() + " LockA 锁 obj2 失败 ");
                     }
@@ -197,12 +307,10 @@ class LockBb implements Runnable {
             System.out.println(new Date().toString() + " LockB 开始执行");
             while (true) {
                 if (UnLockTest.a2.tryAcquire(1, TimeUnit.SECONDS)) {
-                    UnLockTest.num2 = (char) (UnLockTest.num2 + 1);
-                    System.out.println(new Date().toString() + " LockB 锁住 obj2  UnLockTest.num2：" + UnLockTest.num2);
+                    System.out.println(new Date().toString() + " LockB 锁住 obj2");
                     if (UnLockTest.a1.tryAcquire(1, TimeUnit.SECONDS)) {
-                        UnLockTest.num1++;
-                        System.out.println(new Date().toString() + " LockB 锁住 obj1 UnLockTest.num1：" + UnLockTest.num1);
-                        Thread.sleep(60 * 1000);
+                        System.out.println(new Date().toString() + " LockB 锁住 obj1");
+                        Thread.sleep(1000);
                     } else {
                         System.out.println(new Date().toString() + " LockB 锁 obj1 失败 ");
                     }
@@ -211,8 +319,7 @@ class LockBb implements Runnable {
                 }
                 UnLockTest.a1.release(); // 释放
                 UnLockTest.a2.release();
-                System.out.println(new Date().toString() + " LockB 释放 obj1 和 obj2");
-                Thread.sleep(10 * 1000); // 这里知识为了眼视，所以 tryAcquire 值用 1 秒，而却 B 要给 A 让出能执行的时间，否则两个永远是死锁
+                Thread.sleep(1000); // 这里只是为了演示，所以 tryAcquire 值用 1 秒，而却 B 要给 A 让出能执行的时间，否则两个永远是死锁
             }
         } catch (InterruptedException e) {
             e.printStackTrace();
@@ -225,16 +332,16 @@ class LockBb implements Runnable {
 　　输出结果为：
 
 ```java
-Tue Jun 09 19:02:15 CST 2020 LockB 开始执行
-Tue Jun 09 19:02:15 CST 2020 LockA 开始执行
-Tue Jun 09 19:02:15 CST 2020 LockA 锁住 obj1 UnLockTest.num1：1
-Tue Jun 09 19:02:15 CST 2020 LockB 锁住 obj2  UnLockTest.num2：b
-Tue Jun 09 19:02:16 CST 2020 LockA 锁 obj2 失败 
-Tue Jun 09 19:02:16 CST 2020 LockB 锁 obj1 失败 
-Tue Jun 09 19:02:16 CST 2020 LockA 释放 obj1 和 obj2
-Tue Jun 09 19:02:16 CST 2020 LockB 释放 obj1 和 obj2
-Tue Jun 09 19:02:17 CST 2020 LockA 锁住 obj1 UnLockTest.num1：2
-Tue Jun 09 19:02:17 CST 2020 LockA 锁住 obj2 UnLockTest.num2：c
+Thu Jun 11 15:43:47 CST 2020 LockA 开始执行
+Thu Jun 11 15:43:47 CST 2020 LockB 开始执行
+Thu Jun 11 15:43:47 CST 2020 LockB 锁住 obj2
+Thu Jun 11 15:43:47 CST 2020 LockA 锁住 obj1
+Thu Jun 11 15:43:48 CST 2020 LockB 锁 obj1 失败 
+Thu Jun 11 15:43:48 CST 2020 LockA 锁住 obj2
+Thu Jun 11 15:43:49 CST 2020 LockB 锁住 obj2
+Thu Jun 11 15:43:49 CST 2020 LockA 释放 obj1 和 obj2
+Thu Jun 11 15:43:49 CST 2020 LockB 锁住 obj1
+Thu Jun 11 15:43:50 CST 2020 LockA 锁住 obj1
 ```
 
 
