list的知识和平衡二叉树的代码实现

--- a/DataStructure/数据结构/树/平衡二叉树.md
+++ b/DataStructure/数据结构/树/平衡二叉树.md
@@ -77,6 +77,21 @@
 
 　　右旋转代码：
 
+```java
+    private Node<K, V> rotateRight(Node<K, V> node) {
+        Node<K, V> nodeLeft = node.left;
+        Node<K, V> lRight = nodeLeft.right;
+        // 右旋转
+        nodeLeft.right = node;
+        node.left = lRight;
+        //维护节点高度
+        node.height = 1 + Math.max(getHeight(node.left), getHeight(node.right));
+        nodeLeft.height = 1 + Math.max(getHeight(nodeLeft.left), getHeight(nodeLeft.right));
+
+        return nodeLeft;
+    }
+```
+
 
 
 ### 插入的元素在不平衡节点右侧的右侧，简称 RR
@@ -86,6 +101,23 @@
 ![](image/RR.png)
 
 　　左旋转代码：
+
+```java
+    private Node<K, V> rotateLeft(Node<K, V> node) {
+        Node<K, V> nodeRight = node.right;
+        Node<K, V> rLeft = nodeRight.left;
+        // 左旋转
+        nodeRight.left = node;
+        node.right = rLeft;
+        //维护节点高度
+        node.height = 1 + Math.max(getHeight(node.left), getHeight(node.right));
+        nodeRight.height = 1 + Math.max(getHeight(nodeRight.left), getHeight(nodeRight.right));
+
+        return nodeRight;
+    }
+```
+
+
 
 ### 插入的元素在不平衡节点的左侧的右侧，简称 LR
 
@@ -107,11 +139,407 @@
 
 　　插入操作维护 AVL 平衡性的相关代码：
 
+```java
+    private Node<K, V> add(Node node, K key, V value) {
+        if (node == null) {
+            size++;
+            Node newNode = new Node<>(key, value);
+            newNode.height = 0;
+            return newNode;
+        }
+
+        if (key.compareTo(node.key) < 0) {
+            node.left = add(node.left, key, value);
+        } else if (key.compareTo(node.key) > 0) {
+            node.right = add(node.right, key, value);
+        } else { // 如果已经存在，修改对应 value 的值
+            node.value = value;
+        }
+
+        // 维护 node 的高度
+        // 左右子树最高的高度+1
+        node.height = 1 + Math.max(getHeight(node.left), getHeight(node.right));
+
+        // 获取节点的平衡因子
+        int balanceFactor = getBalanceFactor(node);
+
+        // 右旋转
+        // 左子树比右子树要高超过了 1 ，说明当前节点的平衡被打破
+        // 且新添加的节点是在左子树的左子树的左侧。
+        //LL
+        if (balanceFactor > 1 && getBalanceFactor(node.left) >= 0) {
+            return rotateRight(node);
+        }
+
+        //RR
+        if (balanceFactor < -1 && getBalanceFactor(node.right) <= 0) {
+            return rotateLeft(node);
+        }
+
+        //LR
+        if (balanceFactor > 1 && getBalanceFactor(node.left) < 0) {
+            node.left = rotateLeft(node.left);
+            return rotateRight(node);
+        }
+
+        //RL
+        if (balanceFactor < -1 && getBalanceFactor(node.right) > 0) {
+            node.right = rotateRight(node.right);
+            return rotateLeft(node);
+        }
+
+        return node;
+    }
+```
+
 
 
 ## 删除操作保持 AVL 树的平衡
 
 　　删除操作和插入操作需要保持平衡的情况基本是一样的，代码如下所示：
+
+```java
+    private Node<K, V> remove(Node<K, V> node, K key) {
+        if (node == null) {
+            return null;
+        }
+
+        Node<K, V> retNode = null;
+        // 如果要删除的节点小于当前节点，继续查询其左子树
+        if (key.compareTo(node.key) < 0) {
+            node.left = remove(root.left, key);
+            retNode = node;
+        } else if (key.compareTo(node.key) > 0) {
+            // 如果要删除的节点大于当前节点，继续查询其右子树
+            node.right = remove(root.right, key);
+            retNode = node;
+        } else {
+            // 要删除的是当前节点
+
+            // 当前节点的左子树为空
+            if (node.left == null) {
+                Node<K, V> rightNode = node.right;
+                node.right = null;
+                size--;
+                retNode = rightNode;
+            } else if (node.right == null) {
+                // 当前节点的右子树为空
+                Node<K, V> leftNode = node.left;
+                node.left = null;
+                size--;
+                retNode = leftNode;
+            } else {
+
+                // 左右子树都有
+                Node<K, V> rMinNode = getMin(node.right);
+                rMinNode.right = remove(node.right, rMinNode.key);
+                rMinNode.left = node.left;
+                size--;
+                node.left = node.right = null;
+                retNode = rMinNode;
+            }
+        }
+
+        // 如果删除的是叶子节点
+        if (retNode == null) {
+            return null;
+        }
+
+        // 得到 retNode 之后，维护平衡性
+
+        // 维护 node 的高度
+        // 左右子树最高的高度+1
+        retNode.height = 1 + Math.max(getHeight(retNode.left), getHeight(retNode.right));
+
+        // 获取节点的平衡因子
+        int balanceFactor = getBalanceFactor(retNode);
+
+        // 右旋转
+        // 左子树比右子树的高要超过了1，说明当前节点的平衡被打破
+        // 且新添加的节点是在左子树的左子树的左侧
+        //LL
+        if (balanceFactor > 1 && getBalanceFactor(retNode.left) >= 0) {
+            return rotateRight(retNode);
+        }
+
+        //RR
+        if (balanceFactor < -1 && getBalanceFactor(retNode.right) <= 0) {
+            return rotateLeft(retNode);
+        }
+
+        //LR
+        if (balanceFactor > 1 && getBalanceFactor(retNode.right) < 0) {
+            retNode.left = rotateLeft(retNode.left);
+            return rotateRight(retNode);
+        }
+        //RL
+        if (balanceFactor < -1 && getBalanceFactor(retNode.left) > 0) {
+            retNode.right = rotateRight(retNode.right);
+            return rotateLeft(retNode);
+        }
+
+        return retNode;
+    }
+```
+
+## 平衡二叉树完整代码
+
+```java
+/**
+ * 平衡二叉树
+ */
+public class BalanceBinaryTree<K extends Comparable, V> {
+    public static class Node<K, V> {
+        Node left;
+        Node right;
+        V value;
+        K key;
+        int height;
+
+        public Node() {
+
+        }
+
+        public Node(K key, V value) {
+            this.key = key;
+            this.value = value;
+        }
+
+        public Node(K key, V value, Node left, Node right) {
+            this.key = key;
+            this.value = value;
+            this.left = left;
+            this.right = right;
+        }
+
+        @Override
+        public String toString() {
+            return "Node{" +
+                    "key=" + key +
+                    ",value=" + value +
+                    ",height=" + height +
+                    '}';
+        }
+    }
+
+    private Node root;
+    private int size;
+
+    public void add(K key, V value) {
+        root = add(root, key, value);
+    }
+
+    private Node<K, V> add(Node node, K key, V value) {
+        if (node == null) {
+            size++;
+            Node newNode = new Node<>(key, value);
+            newNode.height = 0;
+            return newNode;
+        }
+
+        if (key.compareTo(node.key) < 0) {
+            node.left = add(node.left, key, value);
+        } else if (key.compareTo(node.key) > 0) {
+            node.right = add(node.right, key, value);
+        } else { // 如果已经存在，修改对应 value 的值
+            node.value = value;
+        }
+
+        // 维护 node 的高度
+        // 左右子树最高的高度+1
+        node.height = 1 + Math.max(getHeight(node.left), getHeight(node.right));
+
+        // 获取节点的平衡因子
+        int balanceFactor = getBalanceFactor(node);
+
+        // 右旋转
+        // 左子树比右子树要高超过了 1 ，说明当前节点的平衡被打破
+        // 且新添加的节点是在左子树的左子树的左侧。
+        //LL
+        if (balanceFactor > 1 && getBalanceFactor(node.left) >= 0) {
+            return rotateRight(node);
+        }
+
+        //RR
+        if (balanceFactor < -1 && getBalanceFactor(node.right) <= 0) {
+            return rotateLeft(node);
+        }
+
+        //LR
+        if (balanceFactor > 1 && getBalanceFactor(node.left) < 0) {
+            node.left = rotateLeft(node.left);
+            return rotateRight(node);
+        }
+
+        //RL
+        if (balanceFactor < -1 && getBalanceFactor(node.right) > 0) {
+            node.right = rotateRight(node.right);
+            return rotateLeft(node);
+        }
+
+        return node;
+    }
+
+    private Node<K, V> remove(Node<K, V> node, K key) {
+        if (node == null) {
+            return null;
+        }
+
+        Node<K, V> retNode = null;
+        // 如果要删除的节点小于当前节点，继续查询其左子树
+        if (key.compareTo(node.key) < 0) {
+            node.left = remove(root.left, key);
+            retNode = node;
+        } else if (key.compareTo(node.key) > 0) {
+            // 如果要删除的节点大于当前节点，继续查询其右子树
+            node.right = remove(root.right, key);
+            retNode = node;
+        } else {
+            // 要删除的是当前节点
+
+            // 当前节点的左子树为空
+            if (node.left == null) {
+                Node<K, V> rightNode = node.right;
+                node.right = null;
+                size--;
+                retNode = rightNode;
+            } else if (node.right == null) {
+                // 当前节点的右子树为空
+                Node<K, V> leftNode = node.left;
+                node.left = null;
+                size--;
+                retNode = leftNode;
+            } else {
+
+                // 左右子树都有
+                Node<K, V> rMinNode = getMin(node.right);
+                rMinNode.right = remove(node.right, rMinNode.key);
+                rMinNode.left = node.left;
+                size--;
+                node.left = node.right = null;
+                retNode = rMinNode;
+            }
+        }
+
+        // 如果删除的是叶子节点
+        if (retNode == null) {
+            return null;
+        }
+
+        // 得到 retNode 之后，维护平衡性
+
+        // 维护 node 的高度
+        // 左右子树最高的高度+1
+        retNode.height = 1 + Math.max(getHeight(retNode.left), getHeight(retNode.right));
+
+        // 获取节点的平衡因子
+        int balanceFactor = getBalanceFactor(retNode);
+
+        // 右旋转
+        // 左子树比右子树的高要超过了1，说明当前节点的平衡被打破
+        // 且新添加的节点是在左子树的左子树的左侧
+        //LL
+        if (balanceFactor > 1 && getBalanceFactor(retNode.left) >= 0) {
+            return rotateRight(retNode);
+        }
+
+        //RR
+        if (balanceFactor < -1 && getBalanceFactor(retNode.right) <= 0) {
+            return rotateLeft(retNode);
+        }
+
+        //LR
+        if (balanceFactor > 1 && getBalanceFactor(retNode.right) < 0) {
+            retNode.left = rotateLeft(retNode.left);
+            return rotateRight(retNode);
+        }
+        //RL
+        if (balanceFactor < -1 && getBalanceFactor(retNode.left) > 0) {
+            retNode.right = rotateRight(retNode.right);
+            return rotateLeft(retNode);
+        }
+
+        return retNode;
+    }
+
+    public Node<K, V> getMin(Node<K, V> node) {
+        if (node.left == null) {
+            return node;
+        }
+        return getMin(node.left);
+    }
+
+    public Node<K, V> getMax(Node<K, V> node) {
+        if (node.right == null) {
+            return node;
+        }
+        return getMax(node.right);
+    }
+
+    public int getHeight(Node node) {
+        if (node == null) {
+            return 0;
+        }
+        if (node.left == null && node.right == null) {
+            return 0;
+        }
+        return 1 + Math.max(getHeight(node.left), getHeight(node.right));
+    }
+
+    public int getBalanceFactor(Node node) {
+        if (node == null) {
+            return 0;
+        }
+        int leftHeight = getHeight(node.left);
+        int rightHeight = getHeight(node.right);
+        return leftHeight - rightHeight;
+    }
+
+    private Node<K, V> rotateRight(Node<K, V> node) {
+        Node<K, V> nodeLeft = node.left;
+        Node<K, V> lRight = nodeLeft.right;
+        // 右旋转
+        nodeLeft.right = node;
+        node.left = lRight;
+        //维护节点高度
+        node.height = 1 + Math.max(getHeight(node.left), getHeight(node.right));
+        nodeLeft.height = 1 + Math.max(getHeight(nodeLeft.left), getHeight(nodeLeft.right));
+
+        return nodeLeft;
+    }
+
+    private Node<K, V> rotateLeft(Node<K, V> node) {
+        Node<K, V> nodeRight = node.right;
+        Node<K, V> rLeft = nodeRight.left;
+        // 左旋转
+        nodeRight.left = node;
+        node.right = rLeft;
+        //维护节点高度
+        node.height = 1 + Math.max(getHeight(node.left), getHeight(node.right));
+        nodeRight.height = 1 + Math.max(getHeight(nodeRight.left), getHeight(nodeRight.right));
+
+        return nodeRight;
+    }
+
+    public void levelOrder() {
+        if (root == null) {
+            return;
+        }
+        Deque<Node> nodeDeque = new ArrayDeque<>();
+        nodeDeque.addLast(root);
+        while (!nodeDeque.isEmpty()) {
+            Node node = nodeDeque.removeFirst();
+            System.out.print(node);
+            if (node.left != null) {
+                nodeDeque.addLast(node.left);
+            }
+            if (node.right != null) {
+                nodeDeque.addLast(node.right);
+            }
+        }
+    }
+}
+```
 
 
 
